<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crime Busters</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_report_incident">ReportIncidentActivity</string>
    <string name="report_header">Filing a report</string>
    <string name="main_activity_header">Welcome to CCB</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="panic">Panic</string>
    <string name="report">Report</string>
    <string name="location">Current Location</string>
    <string name="time">Current Time</string>
    <string name="date">Date</string>
    <string name="desc">Description of Incident</string>
    <string name="submit">Submit</string>
    <string name="gpsButton">gpsButton</string>
    <string name="title_activity_httpsubmit_report">Report Submission Status</string>
    <string name="location_gps">Current GPS / Triangulation Position</string>
    <string name="location_human">Location, eg Top Floor</string>
    <string name="submitReportButton">Submit Report</string>
    <string name="title_activity_main">Main Menu</string>
    <string name="welcome">Welcome </string>
    <string name="user_name">User Name</string>
    <string name="user_password">User Password</string>
    <string name="button_login">Log In</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="create_report">Click here to create report</string>
    <string name="button_createReport">Create Report</string>
    <string name="button_updateProfile">Update Profile</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_profile">Profile</string>
    <string name="button_highPriority">High Priority Report</string>
    <string name="button_lowPriority">Low Priority Report</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="button_saveChanges">Save Changes</string>
    <string name="title_activity_high_priority_report">HighPriorityReport</string>
    <string name="title_activity_low_priority_report">LowPriorityReport</string>
    <string name="crime_desc">Crime Description</string>
    <string name="location_desc">Location Description</string>
    <string name="locationX">Location X co-ordinate</string>
    <string name="locationY">Location Y co-ordinate</string>
    <string name="button_submitHighPriorityReport">Submit Report</string>
    <string name="button_submitLowPriorityReport">Submit Report</string>
    <string name="click_pictures">Click here to take pictures</string>
    <string name="button_clickPictures">Click Pictures</string>
    <string name="create_audio">Click here to capture audio</string>
    <string name="button_createAudio">Capture Audio</string>
    <string name="create_video">Click here to capture video</string>
    <string name="button_createVideo">Capture Video</string>
    <string name="title_activity_high_priority_incident">HighPriorityIncidentActivity</string>
    <string name="title_activity_update_profile">Update Profile</string>
    <string name="title_activity_update_settings">Update Settings</string>
    <string name="updateUserButton">Update Profile</string>
    <string name="title_activity_register_user">RegisterUser</string>
    <string name="hint_userName">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_firstName">First Name</string>
    <string name="hint_lastName">Last Name</string>
    <string name="hint_email">Illinois Email Address</string>
    <string name="createUserButton">Submit New User Account</string>
    <string name="changeThemeButton">Change Theme</string>
    <string name="action_create_account">Create New User Account</string>
    <string name="default_email"></string>
    <string name="default_password"></string>
    <string name="welocme">Welcome to Crime Busters</string>
    <string name="update_profile">Update Your Profile</string>
    <string name="low_priority">Report Non-Emergency</string>
    <string name="high_priority">Report Emergency</string>
    <string name="default_latitude">Latitude</string>
    <string name="default_longitude">Longitude</string>
    <string name="take_photo">Take Photo</string>
    <string name="submit_report">Submit Report</string>
    <string name="wait_report">Waiting for Report</string>
    <string name="changeLanguageButton">Change Language</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hint_zipCode">Zip Code</string>
    <string name="hint_address">Address</string>
    <string name="hint_phoneNumber">Phone Number</string>
    <string name="illinois_logo">Illinois Logo</string>
    <string name="logout">Log out</string>
    <string name="add_media">Add Media</string>
    <string name="title_activity_media">Media</string>
    <string name="click_picture1">Click first picture</string>
    <string name="click_picture2">Click second picture</string>
    <string name="click_picture3">Click third picture</string>
    <string name="returnToSubmit">Return to Submission</string>
    <string name="Recording">Record Audio</string>
    <string name="Record">Rec</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="play">play</string>
    <string name="button_video">Record Video</string>
    <string name="btn_video">Vid</string>
    <string name="pic">Pic</string>
	<string name="pic1">Pic 1</string>
	<string name="pic2">Pic 2</string>
	<string name="pic3">Pic 3</string>
	<string name="audiopath">Audio Path</string>
	<string name="videopath">Video Path</string>
	<string name="edit_Profile">Edit Profile</string>
	<string name="report_anonymous">Report Anonymous</string>
	<string name="prefrerred_contact">Preferred Contact Method</string>
	<string-array name="crimetypes_array">
        <item>Theft</item>
        <item>Mugging</item>
        <item>Break-in</item>
        <item>Harassment </item>
    </string-array>
</resources>
