<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReportIncidentActivity" >

    <requestFocus />

    <EditText
        android:id="@+id/locationGPS_lat"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:editable="false"
        android:ems="10"
        android:hint="@string/location_gps"
        android:text="@string/default_latitude"
        android:textColorHint="#200772"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/locationGPS_long"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/locationGPS_lat"
        android:layout_below="@+id/locationGPS_lat"
        android:editable="false"
        android:ems="10"
        android:hint="@string/location_gps"
        android:text="@string/default_longitude"
        android:textColorHint="#200772"
        android:textSize="24dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/addMedia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignTop="@+id/imageView1"
        android:layout_toRightOf="@+id/imageView1"
        android:gravity="center"
        android:onClick="addMedia"
        android:paddingLeft="0dp"
        android:text="@string/add_media"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/submitReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignParentBottom="true"
        android:onClick="submitReport"
        android:text="@string/submit_report"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/location"
        android:layout_below="@+id/location"
        android:ems="10"
        android:hint="@string/desc"
        android:inputType="textMultiLine"
        android:textColorHint="#200772"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_currentTime"
        android:layout_below="@+id/editText_currentTime"
        android:ems="10"
        android:hint="@string/location_human"
        android:inputType="textPostalAddress"
        android:textColorHint="#200772"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/locationGPS_long"
        android:layout_below="@+id/locationGPS_long"
        android:layout_marginTop="16dp"
        android:editable="false"
        android:ems="10"
        android:hint="@string/time"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#200772"
        android:textSize="24dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/message"
        android:layout_below="@+id/message"
        android:src="@drawable/ic_launcher"
        android:textSize="24dp"
        android:textStyle="bold" />

</RelativeLayout>