<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterUserActivity" >

    <EditText
        android:id="@+id/createUser_userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
		android:textColorHint="#200772"
        android:hint="@string/hint_userName"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/createUser_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_password"
        android:textSize="24sp"
        android:textColorHint="#200772"
        android:textStyle="bold"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/createUser_firstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:textColorHint="#200772"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:hint="@string/hint_firstName"
        android:inputType="text" />

    <EditText
        android:id="@+id/createUser_lastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_lastName"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColorHint="#200772"
        android:inputType="text" />

    <EditText
        android:id="@+id/createUser_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColorHint="#200772"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/createUser_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="createUser"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="4"
        android:text="@string/createUserButton" />

</LinearLayout>