<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterUserActivity" >

    <EditText
        android:id="@+id/updateProfile_firstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_firstName"
        android:inputType="textPersonName"
        android:textColorHint="#200772"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/updateProfile_lastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lastName"
        android:inputType="textPersonName"
        android:textColorHint="#200772"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/updateProfile_phoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phoneNumber"
        android:inputType="phone"
        android:textColorHint="#200772"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/updateProfile_button"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:onClick="onUpdateProfile"
        android:text="@string/updateUserButton"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>