<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.illinoiscrimebusters.crimebusters.UpdatedReportIncidentActivity" >

    <requestFocus />

    <EditText
        android:id="@+id/locationGPS_long"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/locationGPS_lat"
        android:layout_alignRight="@+id/locationGPS_lat"
        android:layout_below="@+id/locationGPS_lat"
        android:editable="false"
        android:ems="10"
        android:hint="@string/location_gps"
        android:text="@string/default_longitude"
        android:textColorHint="#200772"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@+id/pictureCaptureButton"
        android:layout_alignLeft="@+id/crimteTypespinner"
        android:layout_alignRight="@+id/recordVideoButton"
        android:ems="10"
        android:hint="@string/desc"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:textColorHint="#200772"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/editText_currentTime_RO"
        android:layout_below="@+id/editText_currentTime_RO"
        android:ems="10"
        android:hint="@string/location_human"
        android:inputType="textPostalAddress"
        android:textColorHint="#200772"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/pictureCaptureButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/submitReport"
        android:layout_alignLeft="@+id/submitReport"
        android:background="@drawable/ic_action_camera_dark"
        android:gravity="center"
        android:onClick="takePicture"
        android:paddingLeft="0dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/audioPlayButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/submitReport"
        android:layout_toRightOf="@+id/audioRecordButton"
        android:background="@drawable/ic_action_play_dark"
        android:onClick="play"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/submitReport"
        android:layout_toRightOf="@+id/audioPlayButton"
        android:background="@drawable/ic_action_stop_dark"
        android:onClick="stop"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/audioRecordButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/submitReport"
        android:layout_toRightOf="@+id/pictureCaptureButton"
        android:background="@drawable/ic_action_mic_dark"
        android:onClick="startAudioRecording"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/submitReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:drawableRight="@drawable/ic_action_send_dark"
        android:onClick="submitReport"
        android:text="@string/submit_report"
        android:textSize="24dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/recordVideoButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/submitReport"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/button2"
        android:background="@drawable/ic_action_video_dark"
        android:onClick="startRecording"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_currentTime_RO"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/locationGPS_long"
        android:layout_alignRight="@+id/locationGPS_long"
        android:layout_below="@+id/locationGPS_long"
        android:editable="false"
        android:ems="10"
        android:hint="@string/time"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#200772"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/crimteTypespinner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@id/location"
        android:layout_below="@+id/location"
        android:ems="10"
        android:textColor="#200772"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/locationGPS_lat"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:editable="false"
        android:ems="10"
        android:hint="@string/location_gps"
        android:text="@string/default_latitude"
        android:textColorHint="#200772"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>