<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MediaActivity" >

    <requestFocus />

     <ImageView
                 android:id="@+id/imageView1"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:src="@drawable/ic_launcher"
                 android:textSize="18sp"
                 android:textStyle="bold" />

         <Button
             android:id="@+id/pictureCaptureButton"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/imageView1"
             android:layout_below="@+id/imageView1"
             android:gravity="center"
             android:onClick="takePicture1"
             android:paddingLeft="0dp"
             android:text="@string/pic1"
             android:textSize="18sp"
             android:textStyle="bold" />

                  <Button
                      android:id="@+id/Picture2"
                      android:layout_width="60dp"
                      android:layout_height="wrap_content"
                      android:layout_alignBaseline="@+id/pictureCaptureButton"
                      android:layout_alignBottom="@+id/pictureCaptureButton"
                      android:layout_alignLeft="@+id/imageView2"
                      android:gravity="center"
                      android:onClick="takePicture2"
                      android:paddingLeft="0dp"
                      android:text="@string/pic2"
                      android:textSize="18sp"
                      android:textStyle="bold" />

                  <Button
                      android:id="@+id/Picture3"
                      android:layout_width="60dp"
                      android:layout_height="wrap_content"
                      
                      android:layout_alignBottom="@+id/Picture2"
                      android:layout_alignParentRight="true"
                      android:layout_marginRight="21dp"
                      android:gravity="center"
                      android:onClick="takePicture3"
                      android:paddingLeft="0dp"
                      android:text="@string/pic3"
                      android:textSize="18sp"
                      android:textStyle="bold" />

                  <ImageView
                      android:id="@+id/imageView3"
                      android:layout_width="60dp"
                      android:layout_height="60dp"
                      android:layout_above="@+id/Picture3"
                      android:layout_alignLeft="@+id/Picture3"
                      android:src="@drawable/ic_launcher"
                      android:textSize="18sp"
                      android:textStyle="bold" />

                  <ImageView
                      android:id="@+id/imageView2"
                      android:layout_width="60dp"
                      android:layout_height="60dp"
                      android:layout_above="@+id/Picture2"
                      android:layout_marginLeft="40dp"
                      android:layout_toRightOf="@+id/imageView1"
                      android:src="@drawable/ic_launcher"
                      android:textSize="18sp"
                      android:textStyle="bold" />
                  
                      <TextView
                          android:id="@+id/textView2"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_alignBaseline="@+id/textView1"
                          android:layout_alignBottom="@+id/textView1"
                          android:layout_alignLeft="@+id/imageView4"
                          android:layout_alignRight="@+id/recordVideoButton"
                          android:layout_marginLeft="20dp"
                          android:gravity="right"
                          android:text="@string/audiopath"
                          android:textColor="#FFFFFF"
                          android:textSize="14sp"
                          android:textStyle="bold" />

                          <Button
                              android:id="@+id/button2"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_alignBaseline="@+id/audioPlayButton"
                              android:layout_alignBottom="@+id/audioPlayButton"
                              android:layout_alignRight="@+id/textView2"
                              android:onClick="stop"
                              android:text="@string/stop"
                              android:textSize="18sp"
                              android:textStyle="bold" />
                            
                                 <Button
				                android:id="@+id/Return"
				                android:layout_width="fill_parent"
				                android:layout_height="wrap_content"
				                android:layout_alignParentBottom="true"
				                android:layout_centerHorizontal="true"
				                android:gravity="center"
				                android:onClick="returnToSubmit"
				                android:paddingLeft="0dp"
				                android:text="@string/returnToSubmit"
				                android:textSize="18sp"
				                android:textStyle="bold" />

                                 <TextView
                                     android:id="@+id/textView3"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_above="@+id/Return"
                                     android:layout_alignLeft="@+id/Return"
                                     android:layout_alignRight="@+id/Return"
                                     android:textSize="14sp"
        							 android:gravity="right"
        							 android:layout_marginBottom="20dp"
        							 android:textStyle="bold"
        							 android:textColor="#FFFFFF"
                                     android:text="@string/videopath" />

                                 <Button
                                     android:id="@+id/audioRecordButton"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_above="@+id/recordVideoButton"
                                     android:layout_alignLeft="@+id/recordVideoButton"
                                     android:layout_marginBottom="18dp"
                                     android:onClick="start" 
                                     android:text="@string/start"
                                     android:textSize="18sp"
                                     android:textStyle="bold" />

                                 <Button
                                     android:id="@+id/recordVideoButton"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_above="@+id/textView3"
                                     android:layout_alignLeft="@+id/textView3"
                                     android:layout_marginBottom="10dp"
                                     android:onClick="startRecording"
                                     android:text="@string/button_video"
                                     android:textSize="18sp"
                                     android:textStyle="bold" />
	
                                 <Button
                                     android:id="@+id/audioPlayButton"
                                     style="?android:attr/buttonStyleSmall"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_alignBaseline="@+id/audioRecordButton"
                                     android:layout_alignBottom="@+id/audioRecordButton"
                                     android:layout_centerHorizontal="true"
                                     android:onClick="play"
                                     android:text="@string/play"
                                     android:textSize="18sp"
                                     android:textStyle="bold" />

                                 <TextView
                                     android:id="@+id/textView1"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_above="@+id/imageView4"
                                     android:layout_alignLeft="@+id/pictureCaptureButton"
                                     android:layout_marginBottom="8dp"
                                     android:gravity="center"
                                     android:text="@string/Recording"
                                     android:textAppearance="?android:attr/textAppearanceMedium"
                                     android:textSize="16sp"
                                     android:textStyle="bold" />

                                 <ImageView
                                     android:id="@+id/imageView4"
                                     android:layout_width="40dp"
                                     android:layout_height="40dp"
                                     android:layout_above="@+id/audioPlayButton"
                                     android:layout_alignRight="@+id/Picture2"
                                     android:layout_marginBottom="16dp"
                                     android:scaleType="fitXY"
                                     android:src="@drawable/mike" />
                           
</RelativeLayout>